# cmake-project-template

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cmake-format.json
cmake/: code-coverage.cmake  googletest-download.cmake  googletest-setup.cmake  qt-setup.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/src/: example-unit-test.cpp
